--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,7 @@
 
     --white: #FFFFFF;
     --blue_light: #003CFF;
+    --blue_dark: #686DF1;
     --green: #2FAB73;
     --black_title: #1C1C1C;
     --black_subtitle: #1C1C1E;
@@ -12,15 +13,18 @@
     --black_exchange: #000000;
     --grey: #4F5665;
     --grey_currency: #808080;
+    --grey_input: #9092B0;
+    --grey_light: #2D3748;
     --features_black: #0B132A;
+    --orange: #EB801D;
     --bgcolor: #F5F4FF;
-
 
     /* text */
 
     --fz_14: 14px;
     --fz_16: 16px;
     --fz_20: 20px;
+    --fz_24: 24px;
     --fz_30: 30px;
     --fz_35: 35px;
     --fz_48: 48px;
@@ -38,27 +42,39 @@
     /* media */
     --fz_14_m13: 12px;
     --fz_14_m92: 10px;
+    --fz_14_m500: 8px;
 
     --fz_16_m13: 14px;
     --fz_16_m92: 12px;
+    --fz_16_m500: 10px;
 
     --fz_20_m13: 18px;
     --fz_20_m92: 16px;
+    --fz_20_m500: 14px;
+
+    --fz_24_m13: 22px;
+    --fz_24_m92: 20px;
+    --fz_24_m500: 16px;
 
     --fz_30_m13: 28px;
     --fz_30_m92: 24px;
+    --fz_30_m500: 20px;
 
     --fz_35_m13: 30px;
     --fz_35_m92: 26px;
+    --fz_35_m500: 22px;
 
     --fz_48_m13: 36px;
     --fz_48_m92: 28px;
+    --fz_48_m500: 22px;
 
     --lh_30_m13: 25px;
     --lh_30_m92: 22px;
+    --lh_30_m500: 18px;
 
     --lh_50_m13: 40px;
     --lh_50_m92: 32px;
+    --lh_50_m500: 24px;
 
     --lh_112_m92: 100%;
 }
@@ -70,6 +86,9 @@
 
 body {
     background-color: var(--bgcolor);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
@@ -438,4 +457,150 @@ body {
 .map__img {
     margin-top: 50px;
     width: 100%;
+}
+
+.support {
+    margin-top: 65px;
+}
+
+.support__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.support__title {
+    margin: 0;
+    text-align: center;
+    font-weight: var(--fw_700);
+    font-size: var(--fz_24);
+    color: var(--orange);
+}
+
+.support__subtitle {
+    margin: 32px 0 0;
+    text-align: center;
+    font-weight: var(--fw_700);
+    font-size: var(--fz_30);
+    color: var(--black_subtitle);
+}
+
+.support__info {
+    text-align: center;
+    margin: 26px 0 0;
+    font-weight: var(--fw_500);
+    font-size: var(--fz_30);
+    color: var(--black_subtitle);
+}
+
+.support__input {
+    margin-top: 62px;
+    background: var(--white);
+    box-shadow: 0px 10px 20px rgba(54, 58, 120, 0.1);
+    border-radius: 20px;
+    padding: 22px 34px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.support__input-input {
+    border: 0;
+    font-family: 'Nunito Sans';
+    padding: 10px;
+    outline: none;
+    color: var(--grey_input);
+}
+
+.support__input-input {
+    border: 0;
+}
+
+.support__button {
+    display: flex;
+    align-items: center;
+    padding: 0 30px 0 14px;
+    gap: 10px;
+    background-color: var(--blue_dark);
+    border-radius: 20px;
+    border: 0;
+    cursor: pointer;
+}
+
+.support__button-img {
+    margin-bottom: 5px;
+}
+
+.support__button-text {
+    font-weight: var(--fw_700);
+    font-size: var(--fz_16);
+    color: var(--white);
+}
+
+.footer {
+    margin-top: auto;
+    padding-top: 100px;
+}
+
+.footer__bg {
+    background: linear-gradient(0deg, rgba(178, 178, 178, 0.2), rgba(178, 178, 178, 0.2)), #F4F4F4;
+}
+
+.footer__wrapper {
+    padding: 96px 0;
+
+}
+
+.footer__logo {
+    max-height: 50px;
+    max-width: 160px;
+}
+
+.footer__top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__info {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
+.footer__number {
+    color: var(--black_exchange);
+    text-decoration: none;
+    font-weight: var(--fw_700);
+    font-size: var(--fz_30);
+}
+
+.footer__email {
+    font-weight: var(--fw_500);
+    font-size: var(--fz_16);
+    color: var(--grey_light);
+    text-decoration: none;
+}
+
+.footer__tags {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 56px 0 0;
+    row-gap: 8px;
+    column-gap: 32px;
+}
+
+.footer__tags-item {
+    font-weight: var(--fw_500);
+    font-size: var(--fz_16);
+    color: var(--black_exchange);
+    cursor: pointer;
+}
+
+.footer__cookies {
+    margin: 64px 0 0;
+    font-weight: var(--fw_500);
+    font-size: var(--fz_16);
+    color: var(--grey_light);
 }
