--- a/src/css/media.css
+++ b/src/css/media.css
@@ -130,6 +130,8 @@
 
     .news__item {
         padding: 28px;
+        height: 350px;
+
     }
     .news__item-title {
         font-size: var(--fz_20_m13);
@@ -305,6 +307,7 @@
 
     .news__item {
         padding: 20px;
+        height: 300px;
     }
 
     .news__item-title {
