--- a/src/ui-kit/Button/Button.module.scss
+++ b/src/ui-kit/Button/Button.module.scss
@@ -1,3 +1,5 @@
+@import '../../global/global.scss';
+
 .button {
     font-weight: var(--fw_700);
     font-size: var(--fz_16);
@@ -13,6 +15,16 @@
     cursor: pointer;
     transition: 0.2s ease-in-out all;
 
+    @include desktop {
+        font-size: var(--fz_16_m13);
+        padding: 14px;
+    }
+
+    @include smallDesktop {
+        font-size: var(--fz_16_m92);
+        padding: 12px;
+    }
+
     &:hover {
         transform: scale(1.05);
     }
@@ -21,6 +33,7 @@
         background-color: var(--btn_disabled);
         border: var(--btn_disabled);
         outline: none;
+        cursor: auto;
 
         &:hover {
             transform: scale(1);
