second fixes pack in module 3

--- a/src/components/HowToCard/HowToCard.module.scss
+++ b/src/components/HowToCard/HowToCard.module.scss
@@ -29,7 +29,7 @@
         @include smallDesktop {
             gap: 50px;
             flex-direction: column;
-            align-items: center;
+            align-items: initial;
         }
 
     }
