--- a/src/components/AboutCard/AboutCard.module.scss
+++ b/src/components/AboutCard/AboutCard.module.scss
@@ -23,7 +23,7 @@
             padding: 20px;
         }
 
-        &_active {
+        &:nth-child(2n) {
             background: rgba(127, 146, 172, 0.7);
             box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.08), 0px 2px 4px rgba(0, 0, 0, 0.2);
             background: rgba(127, 146, 172, 0.7);
