module 4 without fixes

--- a/src/components/Prescoring/Prescoring.module.scss
+++ b/src/components/Prescoring/Prescoring.module.scss
@@ -7,11 +7,6 @@
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.08), 0px 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 28px;
 
-    &__field {
-        display: flex;
-        width: 100%;
-    }
-
     &__btn {
         padding: 16px 30px;
         border-radius: 8px;
@@ -40,7 +35,7 @@
             display: flex;
             justify-content: space-between;
             gap: 200px;
-
+            margin-bottom: 30px;
             @include desktop {
                 gap: 70px;
             }
@@ -138,104 +133,6 @@
             }
 
         }
-    }
-
-    &__input {
-        margin-top: 8px;
-        background: var(--yellow_form);
-        border: 2px solid rgba(128, 128, 128, 0.2);
-        border-radius: 6px;
-        padding: 13px 16px;
-        font-weight: var(--fw_400);
-        font-size: var(--fz_14);
-        line-height: 100%;
-        color: var(--grey_currency);
-        width: 100%;
-        outline: none;
-
-
-        @include desktop {
-            font-size: var(--fz_14_m13);
-        }
-
-        @include smallDesktop {
-            font-size: var(--fz_14_m92);
-        }
-
-        &[type=number]::-webkit-inner-spin-button,
-        &[type=number]::-webkit-outer-spin-button,
-        &[type="date"]::-webkit-inner-spin-button,
-        &[type="date"]::-webkit-calendar-picker-indicator {
-            display: none;
-            -webkit-appearance: none;
-        }
-
-        &_error {
-            border: 2px solid var(--orange_form);
-        }
-
-        &_errortext {
-            font-weight: var(--fw_500);
-            font-size: var(--fz_16);
-            line-height: 100%;
-            color: var(--orange_form);
-            margin-top: 2px;
-        }
-
-        &:focus {
-            border: 2px solid var(--purple_form);
-        }
-    }
-
-
-
-    &__label {
-        position: relative;
-        font-weight: var(--fw_500);
-        font-size: var(--fz_16);
-        line-height: 100%;
-        display: flex;
-        align-items: center;
-
-        color: var(--black_form);
-
-        @include desktop {
-            font-size: var(--fz_16_m13);
-        }
-
-
-        &_icon {
-            transform: translate(-35px, 22px);
-            margin-right: -22px;
-
-            @include smallDesktop {
-                transform: translate(-35px, 19px);
-            }
-        }
-
-        &_required {
-            position: relative;
-
-            &::after {
-                content: '*';
-                top: -10px;
-                position: absolute;
-                font-weight: var(--fw_500);
-                font-size: var(--fz_16);
-                line-height: 100%;
-                right: -15px;
-                color: var(--red_form);
-
-                @include desktop {
-                    font-size: var(--fz_16_m13);
-                }
-
-            }
-        }
-    }
-
-    &__wrapper {
-        max-width: 300px;
     }
 }
 
