--- a/src/ui-kit/Button/Button.module.scss
+++ b/src/ui-kit/Button/Button.module.scss
@@ -8,6 +8,7 @@
     text-align: center;
     letter-spacing: 0.02em;
     background-color: var(--blue_light);
+    border: none;
     border-color: var(--blue_light);
     border-radius: 16px;
     padding: 16px;
